# Skriptal-AutoDocument

./: .env  .gitignore  Makefile  README.md
backend/: .env  Cargo.toml  Dockerfile  docker-compose.yml
backend/migrations/: 20250211201805_create_users.sql  20250213123057_create_revoked_tokens.sql  20250213141204_create_users.sql
backend/src/: lib.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/database/: mod.rs
backend/src/routes/: auth.rs  mod.rs  user.rs
backend/src/services/: mod.rs
backend/src/utils/: errors.rs  mod.rs
