[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
[dependencies]
axum = { version = "0.6", features = ["tokio-tower"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "7.2"
bcrypt = "0.12"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
tower = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tokio-postgres = "0.7"
